Closed Bug 1800211 Opened 2 years ago Closed 2 years ago

[xwayland] Dragging bookmark out of toolbar folder cancels drag

Categories

(Core :: Widget: Gtk, defect, P3)

Firefox 108
defect

Tracking

()

VERIFIED FIXED
109 Branch
Tracking Status
firefox108 --- wontfix
firefox109 --- verified
firefox110 --- verified

People

(Reporter: ke5trel, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

STR:

  1. Start with MOZ_ENABLE_WAYLAND=0 on Ubuntu 22.10 Wayland session.
  2. Create a bookmark toolbar folder and try dragging a bookmark out of the folder.

The drag operation gets canceled when the cursor leaves the folder popup.

Bug 1761877 fixed the Wayland case but not XWayland.

Priority: -- → P3
Assignee: nobody → stransky
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/eb36e9ebf240
[XWayland] Keep open drag source popups on XWayland too r=emilio
Duplicate of this bug: 1800046
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
No longer duplicate of this bug: 1800046

The patch landed in nightly and beta is affected.
:stransky, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox108 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(stransky)
Flags: needinfo?(stransky)

Reproduced on a 2022-11-11 Nightly build on Ubuntu 22.
Verified as fixed on Firefox 109.0b4(build ID: 20221218190303) and Nightly 110.0a1(build ID: 20221218193142) on Ubuntu 22.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: