Bug 1800211 [XWayland] Keep open drag source popups on XWayland too r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D162029